--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     function setUserAndEndPoint() {
         let endPointArray = Math.floor(Math.random() * mapArray.length)
         let userPointArray = Math.floor(Math.random() * mapArray.length)
-        userPointArray = mapSize*mapSize-1; //fix bugs
+//         userPointArray = mapSize*mapSize-1; //fix bugs
         while (userPointArray == endPointArray) {
             endPointArray = Math.floor(Math.random() * mapArray.length)
             userPointArray = Math.floor(Math.random() * mapArray.length)
